--- a/src/main/webapp/resources/css/heroic-features.css
+++ b/src/main/webapp/resources/css/heroic-features.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    background: url("../images/tort.jpg") center center fixed no-repeat;
+    background: url("../img/tort.jpg") center center fixed no-repeat;
     -moz-background-size: cover; /* Firefox до 4.0 */
     -webkit-background-size: cover; /* Safari и Chrome */
     -o-background-size: cover; /* Opera до версии 10.53 */
